--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <title>Login Page</title>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="title-text">
+            <div class="title login">Login</div>
+            <div class="title signup">Signup</div>
+        </div>
+        <div class="form-container">
+            <div class="form-inner">
+                <form action="#" class="login">
+                    <div class="field">
+                        <input type="text" placeholder="john@abc.com" required>
+                    </div>
+                    <div class="field">
+                        <input type="text" placeholder="password" required>
+                    </div>
+                    <div class="forgot-pass"><a href="#">Forgot password?</a></div>
+                    <div class="field">
+                        <input type="submit" value="Login">
+                    </div>
+                    <div class="signup-link">Don't have an account? <a href="#">Signup</a> </div>
+                </form>
+            </div>
+        </div>
+    </div>
     
     <script src="js/main.js"></script>
 </body>
