--- a/index.html
+++ b/index.html
@@ -15,19 +15,43 @@
             <div class="title signup">Signup</div>
         </div>
         <div class="form-container">
+            <div class="slide-controls">
+                <input type="radio" name="slider" id="login" checked>
+                <input type="radio" name="slider" id="signup">
+                <label for="login" class="slide login">Login</label>
+                <label for="signup" class="slide signup">Signup</label>
+                <div class="slide-tab"></div>
+            </div>
             <div class="form-inner">
+                <!-- sign in -->
                 <form action="#" class="login">
                     <div class="field">
                         <input type="text" placeholder="john@abc.com" required>
                     </div>
                     <div class="field">
-                        <input type="text" placeholder="password" required>
+                        <input type="password" placeholder="Password" required>
                     </div>
                     <div class="forgot-pass"><a href="#">Forgot password?</a></div>
                     <div class="field">
                         <input type="submit" value="Login">
                     </div>
                     <div class="signup-link">Don't have an account? <a href="#">Signup</a> </div>
+                </form>
+                <!-- sign up -->
+                <form action="#" class="signup">
+                    <div class="field">
+                        <input type="text" placeholder="john@abc.com" required>
+                    </div>
+                    <div class="field">
+                        <input type="password" placeholder="Password" required>
+                    </div>
+                    <div class="field">
+                        <input type="password" placeholder="Confirm Password" required>
+                    </div>
+                    <div class="field">
+                        <input type="submit" value="Signup">
+                    </div>
+                    <div class="signin-link">Already have an account? <a href="#">Sign in</a> </div>
                 </form>
             </div>
         </div>
