--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="signup-link">Don't have an account? <a href="#">Signup</a> </div>
                 </form>
                 <!-- sign up -->
-                <form action="#" class="signup">
+                <form action="#" class="signin">
                     <div class="field">
                         <input type="text" placeholder="john@abc.com" required>
                     </div>
