--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <img src="image/logo_variant_2.png" alt="Kudoku Logo">
         <div class="title-text">
             <div class="title login">Login</div>
             <div class="title signup">Signup</div>
